# supine

./: .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
examples/: customer_api.py
supine/: __init__.py  api_response.py  base_model.py  exception_handler.py  filter.py  pagination.py  resource.py  router.py  session.py
tests/: test_cache_control.py  test_examples.py  test_filter.py  test_pagination.py  test_router.py
